--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-# Spring Application Name
+# Spring Application data
 spring.application.name=Psymed-Platform
+documentation.application.description=Psymed Platform is a comprehensive solution for managing patient data, appointments, and medical records in a secure and efficient manner.
+documentation.application.version=1.0.0
 
 # Spring DataSource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/psymeddb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
