--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 # Spring Application data
 spring.application.name=Psymed-Platform
 documentation.application.description=Psymed Platform is a comprehensive solution for managing patient data, appointments, and medical records in a secure and efficient manner.
-documentation.application.version=1.0.0
+documentation.application.version=4.0.0
 
 # Spring DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/psymeddb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/neurolink?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
+#admin123administration
 spring.datasource.password=root
+#kXhjPR4H8FsLtZv
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Spring Data JPA Configuration
