--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ documentation.application.description=Psymed Platform is a comprehensive solutio
 documentation.application.version=4.0.0
 
 # Spring DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/neurolink?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/psymeddb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 #admin123administration
 spring.datasource.password=root
