--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ documentation.application.description=Psymed Platform is a comprehensive solutio
 documentation.application.version=4.0.0
 
 # Spring DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/psymeddb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://root:QRsJDljVycIzyFZgaXuPJvePRddrzjth@shortline.proxy.rlwy.net:10382/railway?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 #admin123administration
-spring.datasource.password=root
+spring.datasource.password=QRsJDljVycIzyFZgaXuPJvePRddrzjth
 #kXhjPR4H8FsLtZv
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
